# Raycasting-game

./: CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: Constants.hpp.FF60BA533DFAE35F.idx  Game.hpp.1C7AD3C363816543.idx  Game.hpp.E521D1DAA40CDA7E.idx  GameObject.hpp.8FC7DE50D106486A.idx  Vector2D.hpp.92A3BE7A413FA215.idx  main.cpp.13E4A09DA07E53F4.idx  main.cpp.BE9015633731903E.idx
BackUp/: Player.cpp  RaycastEngine.cpp
assets/: alien.ppm  fireText.ppm  playerText.ppm  textures.ppm  textures32.ppm  textures64.ppm  wall64.ppm  wallText.ppm
src/: Constants.cpp  Constants.hpp  DeltaAngle.cpp  DeltaAngle.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  RaycastEngine.cpp  RaycastEngine.hpp  TitleScreen.cpp  TitleScreen.hpp  Vector2D.cpp  Vector2D.hpp  main.cpp
